fucked jimmy in the ass and he liked it; wired up new search service for quotes
